change button string.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <button id="toggleButton">Enable Movement</button>
+    <button id="toggleButton">Enable Text Movement</button>
     <p id="log">Move your mouse around.</p>
     <script src="script.js"></script>
   </body>
