--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <button id="toggleButton">Enable Text Movement</button>
     <p id="log">Move your mouse around.</p>
+    <div id="milestones">
+      <h3>Milestones Reached:</h3>
+      <ul id="milestoneList"></ul>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
