add more milestones. change style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <button id="toggleButton">Enable Text Movement</button>
+    <button id="toggleMilestones">Show Milestones</button>
     <p id="log">Move your mouse around.</p>
     <div id="milestones">
       <h3>Milestones Reached:</h3>
